<resources>
    <string name="app_name">Registro de asistencias</string>
    <string name="app_logo_content_description">cpr_logo</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- Login -->
    <string name="comunidad_autonoma">Región de Murcia</string>
    <string name="auth_forgot_password"><u>¿Olvidó su contraseña?</u></string>
    <string name="auth_log_in_button">Acceder</string>
    <string name="auth_sign_in_button">Crear cuenta</string>
    <string name="auth_sign_in_link"><u>Crear cuenta</u></string>
    <string name="auth_email">Correo electrónico</string>
    <string name="auth_password">Contraseña</string>
    <string name="auth_name">Nombre y apellidos</string>
    <string name="auth_empty_error">Cumplimente todos los campos</string>
    <string name="auth_password_error">La contraseña debe contener, al menos, 8 caracteres</string>
    <string name="auth_login_error">Usuario y/o contraseña no válidos</string>
    <string name="auth_registry_error">No se ha podido registrar el usuario</string>
    <string name="auth_email_resend">Reenviar correo</string>
    <string name="auth_email_error">Error al enviar el correo</string>
    <string name="auth_email_invalid">Proporcione un email válido</string>
    <string name="auth_email_success">Correo enviado</string>
    <string name="auth_email_verification_title">La cuenta está pendiente de verificación</string>
    <string name="auth_email_verification">Por favor, consulte su correo y verifique su cuenta con el link proporcionado.</string>
    <string name="auth_account_exists">Ya existe una cuenta asociada a esta dirección de email</string>
    <string name="auth_account_weak_password">La contraseña proporcionada es demasiado débil</string>
    <string name="auth_verify_title">Se ha enviado un correo a</string>
    <string name="auth_verify">Por favor, haga clic en el enlace proporcionado en el mismo para verificar su cuenta.</string>
    <string name="auth_connection_error">No hay conexión a Internet</string>

    <!-- Cards -->
    <string name="asiste_qr">QR</string>
    <string name="asiste_manual">Manual</string>

    <!-- Menú toolbar -->
    <string name="toolbar_title_actividades">Actividades</string>
    <string name="toolbar_title_sesiones">Sesiones</string>
    <string name="toolbar_upload">Enviar datos</string>
    <string name="toolbar_download">Descargar datos</string>
    <string name="toolbar_search">Buscar participante</string>
    <string name="toolbar_qr_scan">QR scanner</string>

    <!-- Menú overflow -->
    <string name="toolbar_of_logout">Salir</string>
    <string name="toolbar_of_help">Ayuda</string>
    <string name="toolbar_of_settings">Ajustes</string>

    <!-- Menú tabs -->
    <string name="menu_sesiones_hoy">Hoy</string>
    <string name="menu_sesiones_pasadas">Pasadas</string>

    <!-- QR -->
    <string name="permission_camera">El permiso de cámara es necesario para realizar esta acción. Por favor, actívelo desde los ajustes del dispositivo.</string>
    <string name="permission_camera_title">Acceso a la cámara</string>
    <string name="qr_info">Pulse el botón y sitúe el código QR dentro del marco</string>
    <string name="qr_wrong_format">Formato no válido</string>
    <string name="qr_already_checked">Ya existe una asistencia del/la usuario/a</string>
    <string name="qr_checked">Asistencia registrada</string>
    <string name="qr_not_allowed">No es posible registrar la asistencia</string>
    <string name="fab_button">FAB</string>

    <!-- Asistencia -->
    <string name="attendance_not_set">No hay asistencia registrada</string>
    <string name="attendance_set_button">Marcar asistencia</string>
    <string name="attendance_set">Asistencia registrada a las&#160;</string>
    <string name="attendance_cancel_button">Anular asistencia</string>
    <string name="attendance_qr_method">&#160;con escáner QR</string>
    <string name="attendance_manual_method">&#160;manualmente</string>
    <string name="attendance_not_sent">Datos no enviados</string>

    <!-- Listas  -->
    <string name="no_content_image_description">Sin contenido</string>
    <string name="no_content">No hay sesiones en el dispositivo</string>
    <string name="data_uploaded">Datos enviados</string>
</resources>