<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AuthLoginFragment">

    <EditText
        android:id="@+id/authEmail"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_EMAIL_ADDRESS}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/authPassword"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_PASSWORD}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authEmail"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/bg_blue"
        android:paddingVertical="15dp"
        android:text="@string/auth_log_in_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authPassword"
        app:layout_constraintVertical_bias="0.2" />

    <!-- TODO Olvido de contraseña
        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_forgot_password"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logInButton"
            app:layout_constraintVertical_bias="0.1" />
    -->

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/auth_sign_in_link"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>