<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AuthLoginFragment">

    <EditText
        android:id="@+id/authName"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_EMAIL_ADDRESS}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_account_circle"
        android:drawablePadding="12dp"
        android:hint="@string/auth_name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/authLastName"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_EMAIL_ADDRESS}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_account_circle"
        android:drawablePadding="12dp"
        android:hint="@string/auth_lastname"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authName"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/authEmail"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_EMAIL_ADDRESS}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authLastName"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/authPassword"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="{AUTOFILL_HINT_PASSWORD}"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authEmail"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/bg_blue"
        android:paddingVertical="15dp"
        android:text="@string/auth_sign_in_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authPassword"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>